--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shop
-spring.datasource.username=root
-spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;NON_KEYWORDS=DAY,TIME
+spring.datasource.username=je
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
